[gd_scene load_steps=9 format=3 uid="uid://cc1bydp1w3f1f"]

[ext_resource type="Script" path="res://scripts/monke.gd" id="1_c6x61"]
[ext_resource type="Texture2D" uid="uid://5j2fynbp3pae" path="res://assets/sprites/evilMonkeypixel.png" id="1_oenip"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6h747"]
atlas = ExtResource("1_oenip")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_odw4q"]
atlas = ExtResource("1_oenip")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_urdll"]
atlas = ExtResource("1_oenip")
region = Rect2(128, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_2ywvl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6h747")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odw4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urdll")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_geejo"]
size = Vector2(19, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uybxy"]
size = Vector2(15, 4)

[node name="Monke" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 9
collision_mask = 11
script = ExtResource("1_c6x61")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." groups=["enemy"]]
scale = Vector2(0.35, 0.35)
sprite_frames = SubResource("SpriteFrames_2ywvl")
autoplay = "default"
frame_progress = 0.526547

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["enemy"]]
position = Vector2(-0.5, 2.5)
shape = SubResource("RectangleShape2D_geejo")

[node name="LeftRay" type="RayCast2D" parent="CollisionShape2D" groups=["enemy"]]
target_position = Vector2(-9.5, 0)
collision_mask = 9

[node name="RightRay" type="RayCast2D" parent="CollisionShape2D" groups=["enemy"]]
target_position = Vector2(10.5, 0)
collision_mask = 9

[node name="hitbox" type="Area2D" parent="." groups=["enemy"]]
collision_layer = 9
collision_mask = 9

[node name="deathzone" type="CollisionShape2D" parent="hitbox" groups=["enemy"]]
position = Vector2(-0.5, -8)
shape = SubResource("RectangleShape2D_uybxy")

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
